# MachineLearningSpecialization

./: .gitattributes  README.md  pyproject.toml
Course1/Week1/: cost_function.ipynb  model_representation.ipynb
Course1/Week2/: feature_engineering.ipynb  lab_utils_multi.py  linear_regression.ipynb  linear_regression_sklearn.ipynb  mutiple_linear_regression.ipynb  optimised_gradient_descent.ipynb  vectorization.ipynb
Course1/Week3/: logisitic_regression.ipynb  overfitting.ipynb  plt_logistic_loss.py
Course2/Week1/: neural_network.ipynb
Course2/Week2/: neural_network.ipynb
