[tool.poetry]
name = "machinelearningspecialization"
version = "0.1.0"
description = "Machine Learning Specialization course by Andrew Ng."
authors = ["ThomasStalley <t.stalley@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.26.4"
matplotlib = "^3.8.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

